<resources>
    <string name="app_name">android-project-sample</string>

    <string name="top_button_to_binding_sample">To Binding Sample</string>
    <string name="top_button_to_room_rx_sample">To Room Rx Sample</string>
    <string name="top_button_to_api_call_sample">To Api Call Sample</string>
    <string name="top_button_to_exo_player_sample">To ExoPlayer Sample</string>

    <string name="binding_sample_input_text_hint">Please input text</string>
    <string name="binding_sample_copy_input_text_label">Copy of InputText : </string>
    <string name="binding_sample_length_input_text_label">Length of InputText : </string>
    <string name="binding_sample_button_to_top">Back to Top</string>

    <string name="room_rx_sample_input_new_user_hint">Input name of new user</string>
    <string name="room_rx_sample_button_add_user">Add User</string>

    <string name="api_call_sample_input_user_hint">Input name of GitHub user</string>
    <string name="api_call_sample_button_search_repos">Search Repos</string>
    <string name="api_call_sample_button_search_by_rx">by Rx</string>
    <string name="api_call_sample_button_search_by_coroutine">by Coroutine</string>
</resources>
