<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.github.kazukinr.android.sample.ui.top.TopFragment.Listener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/button_to_binding_sample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> listener.onBindingSampleClicked()}"
            android:padding="8dp"
            android:text="@string/top_button_to_binding_sample"
            app:layout_constraintBottom_toTopOf="@id/button_to_room_rx_sample"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_to_room_rx_sample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> listener.onRoomRxSampleClicked()}"
            android:padding="8dp"
            android:text="@string/top_button_to_room_rx_sample"
            app:layout_constraintBottom_toTopOf="@id/button_to_api_call_sample"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/button_to_binding_sample" />

        <Button
            android:id="@+id/button_to_api_call_sample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> listener.onApiCallSampleClicked()}"
            android:padding="8dp"
            android:text="@string/top_button_to_api_call_sample"
            app:layout_constraintBottom_toTopOf="@id/button_to_exo_player_sample"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/button_to_room_rx_sample" />

        <Button
            android:id="@+id/button_to_exo_player_sample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> listener.onExoPlayerSampleClicked()}"
            android:padding="8dp"
            android:text="@string/top_button_to_exo_player_sample"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/button_to_api_call_sample" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
