<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="headerData"
            type="com.github.kazukinr.android.sample.ui.api_call_sample.ApiCallSampleViewHeaderData" />

        <variable
            name="listener"
            type="com.github.kazukinr.android.sample.ui.api_call_sample.ApiCallSampleView.Listener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_search_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/api_call_sample_input_user_hint"
            app:layout_constraintEnd_toStartOf="@id/button_search_by_rx"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_search_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={headerData.inputUserId}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_search_by_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:enabled="@{headerData.searchButtonEnabled}"
            android:onClick="@{() -> listener.onSearchUserReposRxClicked()}"
            android:padding="8dp"
            android:text="@string/api_call_sample_button_search_by_rx"
            app:layout_constraintBaseline_toBaselineOf="@id/input_layout_search_user"
            app:layout_constraintEnd_toStartOf="@id/button_search_by_coroutine" />

        <Button
            android:id="@+id/button_search_by_coroutine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{headerData.searchButtonEnabled}"
            android:onClick="@{() -> listener.onSearchUserReposCoroutineClicked()}"
            android:padding="8dp"
            android:text="@string/api_call_sample_button_search_by_coroutine"
            app:layout_constraintBaseline_toBaselineOf="@id/input_layout_search_user"
            app:layout_constraintEnd_toEndOf="@id/guideline_end" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_input_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="8dp"
            app:constraint_referenced_ids="input_layout_search_user,button_search_by_rx,button_search_by_coroutine" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repo_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_input_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

